Commit No. 2 – Building app with coroutines

--- a/app/src/main/res/layout/view_movie_item.xml
+++ b/app/src/main/res/layout/view_movie_item.xml
@@ -32,4 +32,17 @@
         app:layout_constraintTop_toBottomOf="@id/movie_poster"
         tools:text="Movie" />
 
+    <TextView
+        android:id="@+id/movie_release_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/layout_margin"
+        android:layout_marginEnd="@dimen/layout_margin"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:lines="1"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/movie_title"
+        tools:text="2023-10-12" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
